# fastapi-test-crud

./: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  tasks.db
alembic/: env.py
alembic/versions/: 79b643c120ad_initial_migration.py
app/: _logger.py  auth.py  cache.py  database.py  main.py  models.py  schemas.py  settings.py
app/routers/: tasks.py  users.py
